--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "mongo-parctice",
   "module": "index.ts",
   "type": "module",
-  "scripts": {
-  },
+  "scripts": {},
   "devDependencies": {
     "@types/bun": "latest"
   },
@@ -11,24 +10,24 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.97",
+    "@types/mongoose-auto-increment": "^5.0.38",
     "@types/morgan": "^1.9.9",
-    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
-    "handlebars": "^4.7.8",
     "install": "^0.13.0",
     "method-override": "^3.0.0",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.0",
+    "mongoose-auto-increment": "^5.0.1",
     "morgan": "^1.10.0",
-    "passport": "^0.7.0",
-    "passport-local": "^1.0.0",
     "ts-node": "^10.9.2"
   }
 }
