--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "scripts": {},
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.4",
     "@types/bun": "latest"
   },
   "peerDependencies": {
